--- a/CarValet/de.lproj/InfoPlist.strings
+++ b/CarValet/de.lproj/InfoPlist.strings
@@ -1,4 +1,5 @@
 /* Localized versions of Info.plist keys */
 
 /* Name of the CarValet App in the App Launcher */
-CFBundleDisplayName = "AutoParker";
+"CFBundleDisplayName" = "AutoParker";
+"CFBundleName" = "AutoParker";
